tests/basic/check/prim/090.pan.out
tests/basic/check/prim/090.pan:2:1-4: error: unable to verify type of f90
tests/basic/check/prim/090.pan:5:1-4: error: unable to verify type of f91
tests/basic/check/prim/090.pan:8:1-4: error: unable to verify type of f92
tests/basic/check/prim/090.pan:11:1-4: error: unable to verify type of f93
tests/basic/check/prim/090.pan:14:1-4: error: unable to verify type of f94
tests/basic/check/prim/090.pan:17:1-4: error: unable to verify type of f95
tests/basic/check/prim/090.pan:20:1-4: error: unable to verify type of f96