tests/basic/check/prim/090.pan
f90 : {v:bool|v=false}
f90 = true

f91 : {v:int|v=0}
f91 = 1

f92 : {v:string|v="goodbye"}
f92 = "hello"

f93 : {v:bool|v=true}
f93 = false

f94 : {v:int|v=1}
f94 = 0

f95 : {v:string|v="hello"}
f95 = "goodbye"

f96 : {v:int|v>1}
f96 = 1

f97 : {v:char|v='a'}
f97 = 'b'
